nav z-index fix

--- a/src/style.css
+++ b/src/style.css
@@ -430,7 +430,7 @@ Utility Classes
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 12;
+  z-index: 1000;
   opacity: 0;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
